[gd_scene load_steps=4 format=2]

[ext_resource path="res://logo.png" type="Texture" id=1]
[ext_resource path="res://Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/menu_scripts/MenuSceneHandler.gd" type="Script" id=4]

[node name="Menu" type="Node2D"]

[node name="Control" type="Control" parent="."]
margin_left = -1.68182
margin_top = 1.0
margin_right = 1023.32
margin_bottom = 598.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="Control"]
modulate = Color( 0.133333, 0.937255, 1, 1 )
margin_left = 347.591
margin_top = 365.227
margin_right = 667.591
margin_bottom = 466.227
rect_pivot_offset = Vector2( 127.393, 143.22 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0.752941, 1, 1 )
custom_colors/font_color_hover = Color( 0.0392157, 0.305882, 0.403922, 1 )
custom_colors/font_color_pressed = Color( 0.0156863, 0.2, 0.243137, 1 )
text = "Options"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Sprite" parent="Control"]
position = Vector2( 487.167, 126.791 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="Play" type="Button" parent="Control"]
modulate = Color( 0.133333, 0.937255, 1, 1 )
margin_left = 345.59
margin_top = 257.0
margin_right = 666.59
margin_bottom = 350.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0.752941, 1, 1 )
custom_colors/font_color_hover = Color( 0.0392157, 0.305882, 0.403922, 1 )
custom_colors/font_color_pressed = Color( 0.0156863, 0.2, 0.243137, 1 )
text = "Play Game"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Control"]
modulate = Color( 0.133333, 0.937255, 1, 1 )
margin_left = 345.909
margin_top = 481.271
margin_right = 665.909
margin_bottom = 582.271
rect_pivot_offset = Vector2( 127.393, 143.22 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0.752941, 1, 1 )
custom_colors/font_color_hover = Color( 0.0392157, 0.305882, 0.403922, 1 )
custom_colors/font_color_pressed = Color( 0.0156863, 0.2, 0.243137, 1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/Options" to="Control/Options" method="_on_Options_pressed"]
[connection signal="pressed" from="Control/Play" to="Control/Play" method="_on_Play_pressed"]
