[gd_scene load_steps=4 format=2]

[ext_resource path="res://Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://logo.png" type="Texture" id=2]
[ext_resource path="res://src/menu_scripts/MenuSceneHandler.gd" type="Script" id=3]

[node name="Menu" type="Node2D"]

[node name="Control" type="Control" parent="."]
margin_left = -1.68182
margin_top = 1.0
margin_right = 1023.32
margin_bottom = 598.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Sprite" parent="Control"]
position = Vector2( 487.167, 126.791 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="Back" type="Button" parent="Control"]
modulate = Color( 0.133333, 0.937255, 1, 1 )
margin_left = 349.0
margin_top = 519.0
margin_right = 672.0
margin_bottom = 588.0
rect_pivot_offset = Vector2( 127.393, 143.22 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0.752941, 1, 1 )
custom_colors/font_color_hover = Color( 0.0392157, 0.305882, 0.403922, 1 )
custom_colors/font_color_pressed = Color( 0.0156863, 0.2, 0.243137, 1 )
text = "Back"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Button" parent="Control"]
modulate = Color( 0.133333, 0.937255, 1, 1 )
margin_left = 349.0
margin_top = 345.126
margin_right = 672.0
margin_bottom = 414.126
rect_pivot_offset = Vector2( -1033.38, -481.271 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0.752941, 1, 1 )
custom_colors/font_color_hover = Color( 0.0392157, 0.305882, 0.403922, 1 )
custom_colors/font_color_pressed = Color( 0.0156863, 0.2, 0.243137, 1 )
text = "Controls"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="Button" parent="Control"]
modulate = Color( 0.133333, 0.937255, 1, 1 )
margin_left = 349.0
margin_top = 259.126
margin_right = 669.0
margin_bottom = 325.126
rect_pivot_offset = Vector2( 127.393, 143.22 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0.752941, 1, 1 )
custom_colors/font_color_hover = Color( 0.0392157, 0.305882, 0.403922, 1 )
custom_colors/font_color_pressed = Color( 0.0156863, 0.2, 0.243137, 1 )
text = "Sound"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Video" type="Button" parent="Control"]
modulate = Color( 0.133333, 0.937255, 1, 1 )
margin_left = 349.0
margin_top = 430.846
margin_right = 672.0
margin_bottom = 499.846
rect_pivot_offset = Vector2( -1033.38, -481.271 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0.752941, 1, 1 )
custom_colors/font_color_hover = Color( 0.0392157, 0.305882, 0.403922, 1 )
custom_colors/font_color_pressed = Color( 0.0156863, 0.2, 0.243137, 1 )
text = "Video"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/Back" to="Control/Back" method="_on_Back_pressed"]
[connection signal="pressed" from="Control/Controls" to="Control/Controls" method="_on_Controls_pressed"]
[connection signal="pressed" from="Control/Sound" to="Control/Sound" method="_on_Sound_pressed"]
[connection signal="pressed" from="Control/Video" to="Control/Video" method="_on_Video_pressed"]
